# cable

./: .gitignore  README.md
autocad_plugin/: ExportCommand.Designer.cs  ExportCommand.cs  ExportEntitiesPlugin.csproj  myPlugin.cs
autocad_plugin/Properties/: AssemblyInfo.cs
data/qt/: DrawingWindow.ui  MainWindow.ui
data/tests/: drawing2.cwe  drawing2.dwg  input_circuits.xls  input_circuits2.xls  user_params.xls  user_params2.xls
data/tests/complete_test1/: CABLEWAY_CV010.cwe  CABLEWAY_CV011.cwe  CABLEWAY_CV08.cwe  CABLEWAY_CV09.cwe  CircuitsReport_fixtures.csv  input_circuits.xls  user_params.xls
data/tests/complete_test1/dwgs/: CABLEWAY_CV010.dwg  CABLEWAY_CV011.dwg  CABLEWAY_CV08.dwg  CABLEWAY_CV09.dwg
prj/: CMakeLists.txt
src/: Debug.cpp  Debug.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  InterfaceFeedback.cpp  InterfaceFeedback.h  MainExecution.cpp  MainExecution.h  Reports.cpp  Reports.h  TDesenho.h  UArmazenamentoCircuitos.h  UContainerDesenhos.cpp  UContainerDesenhos.h  UDadosGenerico.cpp  UDadosGenerico.h  UDefines.h  UErros.cpp  UErros.h  UGeometria.cpp  UGeometria.h  UInfoCelula.cpp  UInfoCelula.h  UInfoCircuitos.cpp  UInfoCircuitos.h  UListaItensCelula.cpp  UListaItensCelula.h  UVerticesArestas.cpp  UVerticesArestas.h  main.cpp
src/Electrical/: ArcCable.cpp  ArcCable.h  Bandeirola.cpp  Bandeirola.h  EdgeConnector.h  ElectricalElement.cpp  ElectricalElement.h  ElectricalElements.h  ElectricalElementsBuilder.cpp  ElectricalElementsBuilder.h  GeometricEdges.h  Instrument.cpp  Instrument.h  StraightCable.cpp  StraightCable.h
src/ScreenDrawing/: GLCoords.cpp  GLCoords.h  UMostraDesenho.cpp  UMostraDesenho.h  UOpenGL.cpp  UOpenGL.h
src/UserParams/: LoadUserParams.cpp  LoadUserParams.h  UserParams.cpp  UserParams.h
src/file/: CsvReader.cpp  CsvReader.h  CweLoader.cpp  CweLoader.h  InputCircuitsReader.cpp  InputCircuitsReader.h
src/interface/: DrawingWindow.cpp  DrawingWindow.h  MainWindow.cpp  MainWindow.h
src/presenters/: DrawingPresenter.cpp  DrawingPresenter.h  MainPresenter.cpp  MainPresenter.h
src/tests/: DrawingLoaderTests.cpp  File2FileTests.cpp  InputCircuitsReaderTests.cpp  TestsUtil.cpp  TestsUtil.h  UserParamsLoadingTests.cpp  basic_tests.cpp  main_tests.cpp
